Arregle la visualizacion de videos y agregado scroll horizontal

--- a/Polyline/polylinesac.netlify.app/proyectos/pben2.html
+++ b/Polyline/polylinesac.netlify.app/proyectos/pben2.html
@@ -226,7 +226,7 @@
                             </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP101/101_VID.mp4', true, '101a')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP101/101_VID.mp4', true, '101a')">
                                     <img src="../Resource/PBEN2/DEP101/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -285,7 +285,7 @@
                             </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP202/202_VID.mp4', true, '202a')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP202/202_VID.mp4', true, '202a')">
                                     <img src="../Resource/PBEN2/DEP202/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -354,7 +354,7 @@
                             </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP203/203_VID.mp4', true, '203')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP203/203_VID.mp4', true, '203')">
                                     <img src="../Resource/PBEN2/DEP203/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -424,7 +424,7 @@
                             </button>    
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP401/401_VID.mp4', true, '401')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP401/401_VID.mp4', true, '401')">
                                     <img src="../Resource/PBEN2/DEP401/5.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -495,7 +495,7 @@
                         </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP402/402_VID.mp4', true, '402')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP402/402_VID.mp4', true, '402')">
                                     <img src="../Resource/PBEN2/DEP402/5.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -568,7 +568,7 @@
 
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP501/501_VID.mp4', true, '501')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP501/501_VID.mp4', true, '501')">
                                     <img src="../Resource/PBEN2/DEP501/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -635,7 +635,7 @@
                         </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP502/502_VID.mp4', true, '502')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP502/502_VID.mp4', true, '502')">
                                     <img src="../Resource/PBEN2/DEP502/5.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -697,7 +697,7 @@
                             </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PBEN2/DEP503/503_VID.mp4', true, '503')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PBEN2/DEP503/503_VID.mp4', true, '503')">
                                     <img src="../Resource/PBEN2/DEP503/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
