--- a/Polyline/polylinesac.netlify.app/proyectos/plin.html
+++ b/Polyline/polylinesac.netlify.app/proyectos/plin.html
@@ -230,11 +230,11 @@
                             </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PLIN/DEPA 1201/video cocina depa 1201.mp4', true, 1201)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PLIN/DEPA 1201/video cocina depa 1201.mp4', true, 1201)">
                                     <img src="../Resource/PLIN/DEPA%201201/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PLIN/DEPA 1201/video dormitorio depa 1201.mp4', true, 1201)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PLIN/DEPA 1201/video dormitorio depa 1201.mp4', true, 1201)">
                                     <img src="../Resource/PLIN/DEPA%201201/2.jpg" alt="Vista 1">
                                 </div>
                                 <!-- Ítem 2 -->
@@ -309,7 +309,7 @@
                             </button>    
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PLIN/DEPA 1202/video depa 1202.mp4', true, 1202)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PLIN/DEPA 1202/video depa 1202.mp4', true, 1202)">
                                     <img src="../Resource/PLIN/DEPA%201202/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 2 -->
@@ -464,13 +464,13 @@
                             </button>    
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PLIN/DEPA 1302/video depa 1302 1.mp4', true, 1302)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PLIN/DEPA 1302/video depa 1302 1.mp4', true, 1302)">
                                     <img src="../Resource/PLIN/DEPA%201302/1.jpg" alt="Vista 0">
                                 </div>
-                                <div class="carousel-item" onclick="changeContent('/Resource/PLIN/DEPA 1302/video depa 1302 2.mp4', true, 1302)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PLIN/DEPA 1302/video depa 1302 2.mp4', true, 1302)">
                                     <img src="../Resource/PLIN/DEPA%201302/2.jpg" alt="Vista 0">
                                 </div>
-                                <div class="carousel-item" onclick="changeContent('/Resource/PLIN/DEPA 1302/video depa 1302 3.mp4', true, 1302)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PLIN/DEPA 1302/video depa 1302 3.mp4', true, 1302)">
                                     <img src="../Resource/PLIN/DEPA%201302/3.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 2 -->
@@ -518,15 +518,15 @@
         <section id="departamentos" class="departamentos-section">
             <div class="animated-title">
                 <div class="main-title" >
-                    <span class="letter" style="color: aqua;">T</span>
-                    <span class="letter" style="color: aqua;">I</span>
-                    <span class="letter" style="color: aqua;">P</span>
-                    <span class="letter" style="color: aqua;">O</span>
-                    <span class="letter" style="color: aqua;">L</span>
-                    <span class="letter" style="color: aqua;">O</span>
-                    <span class="letter" style="color: aqua;">G</span>
-                    <span class="letter" style="color: aqua;">Í</span>
-                    <span class="letter" style="color: aqua;">A</span>
+                    <span class="letter">T</span>
+                    <span class="letter">I</span>
+                    <span class="letter">P</span>
+                    <span class="letter">O</span>
+                    <span class="letter">L</span>
+                    <span class="letter">O</span>
+                    <span class="letter">G</span>
+                    <span class="letter">Í</span>
+                    <span class="letter">A</span>
                 </div>
         
         </section>
