--- a/Polyline/polylinesac.netlify.app/proyectos/ppl1.html
+++ b/Polyline/polylinesac.netlify.app/proyectos/ppl1.html
@@ -153,12 +153,6 @@
                     <span class="letter">&nbsp;</span>
                     <span class="letter" data-translate="PUEBLO">PUEBLO</span>
                     <span class="letter">&nbsp;</span>
-                    <span class="letter">L</span>
-                    <span class="letter">I</span>
-                    <span class="letter">B</span>
-                    <span class="letter">R</span>
-                    <span class="letter">E</span>
-                    <br>
                     <span class="letter" data-translate="SIENNA">SIENNA</span>
                     
                 </div>
@@ -204,7 +198,7 @@
                             </button>    
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA201/201_VID.mp4', true, '201b')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA201/201_VID.mp4', true, '201b')">
                                     <img src="../Resource/PPL1/DEPA201/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -270,7 +264,7 @@
                             </button>
                             <div class="carousel-track">
                                 <!-- Ítem Principal -->
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA202/202_VID.mp4', true, '202b')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA202/202_VID.mp4', true, '202b')">
                                     <img src="../Resource/PPL1/DEPA202/1.jpg" alt="Vista 0">
                                 </div>
                                 <!-- Ítem 1 -->
@@ -345,7 +339,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA203/203_VID.mp4', true, '203b')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA203/203_VID.mp4', true, '203b')">
                                     <img src="../Resource/PPL1/DEPA203/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA203/1.jpg', false, '203b')">
@@ -403,7 +397,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA204/204_VID.mp4', true, 204)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA204/204_VID.mp4', true, 204)">
                                     <img src="../Resource/PPL1/DEPA204/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA204/1.jpg', false, 204)">
@@ -463,7 +457,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA205/205_VID.mp4', true, 205)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA205/205_VID.mp4', true, 205)">
                                     <img src="../Resource/PPL1/DEPA205/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA205/1.jpg', false, 205)">
@@ -529,7 +523,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA401/401_VID.mp4', true, '401b')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA401/401_VID.mp4', true, '401b')">
                                     <img src="../Resource/PPL1/DEPA401/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA401/1.jpg', false, '401b')">
@@ -593,7 +587,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA402/402_VID.mp4', true, '402b')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA402/402_VID.mp4', true, '402b')">
                                     <img src="../Resource/PPL1/DEPA402/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA402/1.jpg', false, '402b')">
@@ -653,7 +647,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>    
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA403/403_VID.mp4', true, 403)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA403/403_VID.mp4', true, 403)">
                                     <img src="../Resource/PPL1/DEPA403/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA403/1.jpg', false, 403)">
@@ -713,7 +707,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA404/404_VID.mp4', true, 404)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA404/404_VID.mp4', true, 404)">
                                     <img src="../Resource/PPL1/DEPA404/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA404/1.jpg', false, 404)">
@@ -773,7 +767,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>    
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA406/406_VID.mp4', true, 406)">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA406/406_VID.mp4', true, 406)">
                                     <img src="../Resource/PPL1/DEPA406/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA406/1.jpg', false, 406)">
@@ -833,7 +827,7 @@
                                 <i class="fa fa-chevron-left"></i>
                             </button>
                             <div class="carousel-track">
-                                <div class="carousel-item" onclick="changeContent('/Resource/PPL1/DEPA502/502_VID.mp4', true, '502b')">
+                                <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA502/502_VID.mp4', true, '502b')">
                                     <img src="../Resource/PPL1/DEPA502/1.jpg" alt="Vista 0">
                                 </div>
                                 <div class="carousel-item" onclick="changeContent('../Resource/PPL1/DEPA502/1.jpg', false, '502b')">
