Arreglado las banderas al momento de cambiar de idioma

--- a/Polyline/polylinesac.netlify.app/index.html
+++ b/Polyline/polylinesac.netlify.app/index.html
@@ -704,7 +704,7 @@ document.addEventListener('DOMContentLoaded', () => {
             const options = document.getElementById('languageOptions');
             
             // Actualizar el botón con el idioma seleccionado
-            currentFlag.src = `/Resource/flags/${lang}.png`;
+            currentFlag.src = `Resource/flags/${lang}.png`;
             currentLanguage.textContent = {
                 'es': 'Español',
                 'en': 'English',
