--- a/Polyline/polylinesac.netlify.app/proyectos/ppl1.html
+++ b/Polyline/polylinesac.netlify.app/proyectos/ppl1.html
@@ -1276,7 +1276,7 @@
         const currentLanguage = document.getElementById('currentLanguage');
         const languageOptions = document.getElementById('languageOptions');
         
-        currentFlag.src = `/Resource/flags/${lang}.png`;
+        currentFlag.src = `../Resource/flags/${lang}.png`;
         currentLanguage.textContent = {
             'es': 'Español',
             'en': 'English',
