--- a/Polyline/polylinesac.netlify.app/index-2.html
+++ b/Polyline/polylinesac.netlify.app/index-2.html
@@ -714,7 +714,7 @@ document.addEventListener('DOMContentLoaded', () => {
             const options = document.getElementById('languageOptions');
             
             // Actualizar el botón con el idioma seleccionado
-            currentFlag.src = `/Resource/flags/${lang}.png`;
+            currentFlag.src = `../Resource/flags/${lang}.png`;
             currentLanguage.textContent = {
                 'es': 'Español',
                 'en': 'English',
