--- a/Polyline/polylinesac.netlify.app/proyectos/cpg5.html
+++ b/Polyline/polylinesac.netlify.app/proyectos/cpg5.html
@@ -515,7 +515,7 @@
             const options = document.getElementById('languageOptions');
             
             // Actualizar el botón con el idioma seleccionado
-            currentFlag.src = `/Resource/flags/${lang}.png`;
+            currentFlag.src = `../Resource/flags/${lang}.png`;
             currentLanguage.textContent = {
                 'es': 'Español',
                 'en': 'English',
